# ecolibrary-web

./: .coverage  Dockerfile  coverage.xml  db.sqlite3  pyproject.toml  sonar-project.properties
.sonar/: report-task.txt
eco/: forms.py  services.py  tests.py  urls.py  views.py
eco/templates/: base.html  book_detail.html  favorites.html  index.html  login.html  register.html
portal/: settings.py  urls.py
