[project]
name = "ecolibrary-web"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.8",
    "gunicorn>=23.0.0",
    "pysonar>=1.2.1.3951",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "pytest-django>=4.11.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "portal.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
python_classes = ["Test*", "*Tests"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--reuse-db",
    "-v",
]
testpaths = ["eco"]
norecursedirs = [
    ".venv",
    "venv",
    "env",
    "site-packages",
    "migrations",
    "__pycache__",
    "*.egg-info",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]

# --- Configuración de Cobertura (Coverage) ---

[tool.coverage.run]
# Indica que la cobertura debe medirse desde la raíz actual
source = ["eco"]
# La lista negra de archivos que NO queremos medir
omit = [
    "*/migrations/*",       # Archivos autogenerados de base de datos
    "manage.py",            # Script de entrada
    "portal/*",             # Configuración del proyecto Django
    "*/settings.py",        # Configuración
    "portal/settings.py",  # Configuración principal
    "eco/tests.py",      # Tests de la app eco
    "*/test_*.py",         # Patrones de archivos de test
    "*/wsgi.py",            # Entrada del servidor
    "*/asgi.py",            # Entrada asíncrona
    "*/tests.py",           # No tiene sentido medir el test en sí mismo
    "*/test_*.py",          # Patrones de archivos de test
    "*/__init__.py",        # Archivos vacíos de paquete
    ".venv/*",              # CRÍTICO: Ignora el entorno virtual de uv
    "*/site-packages/*"     # Ignora librerías de terceros (Django, Requests, etc.)
]

[tool.coverage.report]
# No fallar si no encuentra algún archivo fuente
ignore_errors = true
# Opcional: Excluir líneas vacías del reporte
skip_empty = true